--- a/.marketplace.yaml
+++ b/.marketplace.yaml
@@ -1,5 +1,5 @@
 {
-  "name": "dummy-repo",
+  "name": "dummy-repo-2",
   "description": "This is dummy repo 2. It is used to showcase the new config file feature.",
   "images": [
     "img/test"
