--- a/.marketplace.yaml
+++ b/.marketplace.yaml
@@ -2,7 +2,7 @@
   "name": "dummy-repo-2",
   "description": "This is dummy repo 2. It is used to showcase the new config file feature.",
   "images": [
-    "img/test"
+    "img/test123"
   ],
   "tags": ["LMS"]
 }
