test: event push

--- a/.marketplace.yaml
+++ b/.marketplace.yaml
@@ -1,5 +1,5 @@
 {
-  "name": "dummy-repoohho",
+  "name": "dummy-repohho",
   "description": "This is dummy repo 2. It is used to showcase the new config file feature.",
   "images": [
     "img/test35"
