--- a/.marketplace.yaml
+++ b/.marketplace.yaml
@@ -1,6 +1,6 @@
 {
-  "name": "dummy-repo1111",
-  "description": "HEH This is dummy repo 2. It is used to showcase the new config file feature.",
+  "name": "test1""
+  "description": "Test repo. It is used to showcase the new config file feature.",
   "images": [
     "img/test35"
   ],
