--- a/.marketplace.yaml
+++ b/.marketplace.yaml
@@ -1,8 +1,6 @@
 {
-  "name": "test1""
-  "description": "Test repo. It is used to showcase the new config file feature.",
-  "images": [
-    "img/test35"
-  ],
-  "tags": ["LMS"]
+  "name": "dummy-repo-00231",
+  "description": "This is dummy repo 2. It is used to showcase the new config file feature.",
+  "images": [ "img/test35" ],
+  "tags": [ "LMS" ]
 }
