--- a/.marketplace.yaml
+++ b/.marketplace.yaml
@@ -1,6 +1,6 @@
 {
   "name": "dummy-repo-2",
-  "description": "This is dummy repo 2. It is used to showcase the new config file feature.",
+  "description": "This is dummy repo 2... It is used to showcase the new config file feature.",
   "images": [ "img/test35" ],
   "tags": [ "LMS" ]
 }
